--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
   },
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
     "@nx/next": "16.4.0",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.5.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
     "@nx/eslint-plugin": "16.4.0",
     "@nx/jest": "16.4.0",
     "@nx/js": "16.4.0",
@@ -29,6 +33,7 @@
     "@typescript-eslint/parser": "^5.58.0",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
+    "clsx": "^1.2.1",
     "eslint": "~8.15.0",
     "eslint-config-next": "13.4.1",
     "eslint-config-prettier": "8.1.0",
