feat: use directus image optimization

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,14 @@ services:
       ADMIN_PASSWORD: ${DIRECTUS_ADMIN_PASSWORD}
       CORS_ORIGIN: ${DIRECTUS_CORS_ORIGIN}
       CORS_ENABLED: true
+      STORAGE_LOCATIONS: amazon
+      STORAGE_AMAZON_DRIVER: ${DIRECTUS_STORAGE_AMAZON_DRIVER}
+      STORAGE_AMAZON_KEY: ${DIRECTUS_STORAGE_AMAZON_KEY}
+      STORAGE_AMAZON_SECRET: ${DIRECTUS_STORAGE_AMAZON_SECRET}
+      STORAGE_AMAZON_BUCKET: ${DIRECTUS_STORAGE_AMAZON_BUCKET}
+      STORAGE_AMAZON_REGION: ${DIRECTUS_STORAGE_AMAZON_REGION}
+      STORAGE_AMAZON_ENDPOINT: ${DIRECTUS_STORAGE_AMAZON_ENDPOINT}
+      STORAGE_AMAZON_ROOT: ${DIRECTUS_STORAGE_AMAZON_ROOT}
       WEBSOCKETS_ENABLED: false
 
 volumes:
