--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@nx/next": "16.4.0",
+    "@tanstack/react-query": "^4.32.0",
     "envsafe": "^2.0.3",
     "next": "13.4.1",
     "react": "18.2.0",
