--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "nx run-many --target=dev --projects=storefront --parallel"
+    "dev": "nx run-many --target=dev --projects=storefront --parallel",
+    "build": "nx run-many --target=build --projects=storefront --parallel",
+    "deploy": "echo '.env is up to date ?' && sleep 5 && npm run build && gcloud run deploy --source dist/apps/storefront --project petit-roudoudou-daae4 --set-env-vars \"NEXT_IMAGE_DOMAINS=ptitroudoudou-echoppe-dev.s3.eu-west-3.amazonaws.com\" --region europe-west9 storefront && firebase deploy --only hosting"
   },
   "private": true,
   "dependencies": {
@@ -16,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.5.1",
+    "sharp": "^0.32.6",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
