--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -10,8 +10,11 @@ jobs:
     steps:
       - uses: 'actions/checkout@v3'
 
-      - name: 'Install dependencies'
-        run: 'yarn install'
+      - name: 'Download dependencies'
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: 'yarn'
 
       - name: 'Setup .env'
         run: |
