--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -49,6 +49,7 @@ jobs:
         uses: 'actions/download-artifact@v2'
         with:
           name: 'dist'
+          path: 'dist'
 
       - name: 'Deploy to Cloud Run'
         uses: google-github-actions/deploy-cloudrun@v0
