--- a/package.json
+++ b/package.json
@@ -8,17 +8,22 @@
   },
   "private": true,
   "dependencies": {
-    "@headlessui/react": "^1.7.15",
+    "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.3.1",
     "@nx/next": "16.4.0",
     "@tanstack/react-query": "^4.32.0",
     "envsafe": "^2.0.3",
+    "firebase": "^10.4.0",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.2",
     "react-intersection-observer": "^9.5.1",
     "sharp": "^0.32.6",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
@@ -33,6 +38,7 @@
     "@types/node": "18.14.2",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "autoprefixer": "10.4.13",
