--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -34,6 +34,28 @@ jobs:
           name: 'dist'
           path: 'dist'
 
+  build-functions:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: 'actions/checkout@v3'
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: 'yarn'
+
+      - name: 'Download dependencies'
+        run: 'cd apps/functions && yarn install --frozen-lockfile'
+
+      - name: 'Build'
+        run: 'cd apps/functions && yarn build'
+
+      - name: 'Save artifacts'
+        uses: 'actions/upload-artifact@v2'
+        with:
+          name: 'functions'
+          path: 'apps/functions/dist'
+
   deploy-to-cloud-run:
     needs: [build]
     runs-on: ubuntu-latest
@@ -60,15 +82,21 @@ jobs:
           env_vars: |
             NEXT_IMAGE_DOMAINS=${{ vars.NEXT_IMAGE_DOMAINS }}
 
-  deploy-hosting:
+  deploy-firebase:
     runs-on: ubuntu-latest
-    needs: [deploy-to-cloud-run]
+    needs: [deploy-to-cloud-run, build-functions]
     steps:
       - uses: 'actions/checkout@v3'
+
+      - name: 'Download artifacts'
+        uses: 'actions/download-artifact@v2'
+        with:
+          name: 'functions'
+          path: 'apps/functions/dist'
 
       - name: Deploy Hosting (Firebase)
         uses: w9jds/firebase-action@master
         with:
-          args: deploy --only hosting
+          args: deploy
         env:
           GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
