--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "private": true,
   "dependencies": {
+    "firebase-admin": "^11.8.0",
+    "firebase-functions": "^4.3.1",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.1",
