--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -1,26 +1,13 @@
 {
   "name": "functions",
   "scripts": {
-    "build": "tsc",
-    "build:watch": "tsc --watch",
-    "serve": "npm run build && firebase emulators:start --only functions",
-    "shell": "npm run build && firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "build": "tsc"
   },
   "engines": {
     "node": "18"
   },
   "main": "dist/apps/functions/src/index.js",
-  "dependencies": {
-    "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1",
-    "tslib": "^2.6.2"
-  },
-  "devDependencies": {
-    "firebase-functions-test": "^3.1.0",
-    "typescript": "^4.9.0"
-  },
+  "dependencies": {},
+  "devDependencies": {},
   "private": true
 }
