--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  dependencies:
     runs-on: ubuntu-latest
     steps:
       - uses: 'actions/checkout@v3'
@@ -17,6 +17,28 @@ jobs:
 
       - name: 'Download dependencies'
         run: 'yarn install --frozen-lockfile'
+
+      - name: 'Upload Artifacts'
+        uses: 'actions/upload-artifact@v2'
+        with:
+          name: 'node_modules'
+          path: 'node_modules'
+
+  build:
+    runs-on: ubuntu-latest
+    needs: [dependencies]
+    steps:
+      - uses: 'actions/checkout@v3'
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: 'Download dependencies (artifacts)'
+        uses: 'actions/download-artifact@v2'
+        with:
+          name: 'node_modules'
+          path: 'node_modules'
 
       - name: 'Setup .env'
         run: |
@@ -36,16 +58,19 @@ jobs:
 
   build-functions:
     runs-on: ubuntu-latest
+    needs: [dependencies]
     steps:
       - uses: 'actions/checkout@v3'
 
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'yarn'
 
-      - name: 'Download dependencies'
-        run: 'yarn install --frozen-lockfile'
+      - name: 'Download dependencies (artifacts)'
+        uses: 'actions/download-artifact@v2'
+        with:
+          name: 'node_modules'
+          path: 'node_modules'
 
       - name: 'Build'
         working-directory: 'apps/functions'
@@ -83,21 +108,40 @@ jobs:
           env_vars: |
             NEXT_IMAGE_DOMAINS=${{ vars.NEXT_IMAGE_DOMAINS }}
 
-  deploy-firebase:
+  deploy-firebase-hosting:
     runs-on: ubuntu-latest
-    needs: [deploy-to-cloud-run, build-functions]
+    needs: [deploy-to-cloud-run]
     steps:
       - uses: 'actions/checkout@v3'
 
-      - name: 'Download artifacts'
+      - name: Deploy Hosting
+        uses: w9jds/firebase-action@master
+        with:
+          args: deploy --only hosting
+        env:
+          GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+
+  deploy-firebase-without-hosting:
+    runs-on: ubuntu-latest
+    needs: [build-functions]
+    steps:
+      - uses: 'actions/checkout@v3'
+
+      - name: 'Download Functions Artifacts'
         uses: 'actions/download-artifact@v2'
         with:
           name: 'functions'
           path: 'apps/functions/dist'
 
-      - name: Deploy Hosting (Firebase)
+      - name: 'Download node_modules Artifacts'
+        uses: 'actions/download-artifact@v2'
+        with:
+          name: 'node_modules'
+          path: 'apps/functions/node_modules'
+
+      - name: Deploy
         uses: w9jds/firebase-action@master
         with:
-          args: deploy
+          args: deploy --except hosting
         env:
           GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
