--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -5,8 +5,9 @@ on:
     branches: [main]
 
 jobs:
-  dependencies:
+  build:
     runs-on: ubuntu-latest
+    needs: [dependencies]
     steps:
       - uses: 'actions/checkout@v3'
 
@@ -17,28 +18,6 @@ jobs:
 
       - name: 'Download dependencies'
         run: 'yarn install --frozen-lockfile'
-
-      - name: 'Upload Artifacts'
-        uses: 'actions/upload-artifact@v2'
-        with:
-          name: 'node_modules'
-          path: 'node_modules'
-
-  build:
-    runs-on: ubuntu-latest
-    needs: [dependencies]
-    steps:
-      - uses: 'actions/checkout@v3'
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - name: 'Download dependencies (artifacts)'
-        uses: 'actions/download-artifact@v2'
-        with:
-          name: 'node_modules'
-          path: 'node_modules'
 
       - name: 'Setup .env'
         run: |
@@ -66,11 +45,8 @@ jobs:
         with:
           node-version: 18
 
-      - name: 'Download dependencies (artifacts)'
-        uses: 'actions/download-artifact@v2'
-        with:
-          name: 'node_modules'
-          path: 'node_modules'
+      - name: 'Download dependencies'
+        run: 'yarn install --frozen-lockfile'
 
       - name: 'Build'
         working-directory: 'apps/functions'
@@ -127,17 +103,21 @@ jobs:
     steps:
       - uses: 'actions/checkout@v3'
 
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
       - name: 'Download Functions Artifacts'
         uses: 'actions/download-artifact@v2'
         with:
           name: 'functions'
           path: 'apps/functions/dist'
 
-      - name: 'Download node_modules Artifacts'
-        uses: 'actions/download-artifact@v2'
-        with:
-          name: 'node_modules'
-          path: 'apps/functions/node_modules'
+      - name: 'Download dependencies'
+        run: 'yarn install --frozen-lockfile'
+
+      - name: 'Move Dependencies'
+        run: 'mv node_modules apps/functions'
 
       - name: Deploy
         uses: w9jds/firebase-action@master
