--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -7,7 +7,10 @@
     "node": "18"
   },
   "main": "dist/apps/functions/src/index.js",
-  "dependencies": {},
+  "dependencies": {
+    "firebase-admin": "^11.11.0",
+    "firebase-functions": "^4.3.1"
+  },
   "devDependencies": {},
   "private": true
 }
