--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -9,7 +9,8 @@
   "main": "dist/apps/functions/src/index.js",
   "dependencies": {
     "firebase-admin": "^11.11.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.3.1",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {},
   "private": true
