--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -42,6 +42,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
+          cache: 'yarn'
 
       - name: 'Download dependencies'
         run: 'yarn install --frozen-lockfile'
@@ -101,21 +102,11 @@ jobs:
     steps:
       - uses: 'actions/checkout@v3'
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
       - name: 'Download Functions Artifacts'
         uses: 'actions/download-artifact@v2'
         with:
           name: 'functions'
           path: 'apps/functions/dist'
-
-      - name: 'Download dependencies'
-        run: 'yarn install --frozen-lockfile'
-
-      - name: 'Move Dependencies'
-        run: 'mv node_modules apps/functions'
 
       - name: Deploy
         uses: w9jds/firebase-action@master
