--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.46.2",
     "react-intersection-observer": "^9.5.1",
     "sharp": "^0.32.6",
+    "slugify": "^1.6.6",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.2"
