feat: customize parts with 3D preview

--- a/firebase.json
+++ b/firebase.json
@@ -26,6 +26,12 @@
     "ui": {
       "enabled": true
     },
+    "functions": {
+      "port": 5001
+    },
+    "hosting": {
+      "port": 5000
+    },
     "singleProjectMode": true
   },
   "firestore": {
