--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.1",
     "@nx/next": "16.4.0",
+    "@react-three/drei": "^9.88.4",
+    "@react-three/fiber": "^8.14.6",
     "@tanstack/react-query": "^4.32.0",
     "envsafe": "^2.0.3",
     "firebase": "^10.4.0",
@@ -25,6 +27,7 @@
     "react-intersection-observer": "^9.5.1",
     "sharp": "^0.32.6",
     "slugify": "^1.6.6",
+    "three": "^0.157.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.2"
@@ -42,6 +45,7 @@
     "@types/node": "18.14.2",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "@types/three": "^0.157.2",
     "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
