--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -9,10 +9,13 @@
   },
   "main": "dist/apps/functions/src/index.js",
   "dependencies": {
+    "envsafe": "^2.0.3",
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.3.1",
     "tslib": "^2.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "typescript": "^5.2.2"
+  },
   "private": true
 }
