--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -118,6 +118,12 @@ jobs:
           name: 'functions'
           path: 'apps/functions/dist'
 
+      - name: 'Set function .env'
+        run: |
+          cat <<EOF > apps/functions/.env
+          CORS_FRONTEND_URL=${{ vars.CORS_FRONTEND_URL }}
+          EOF
+
       - name: 'Download dependencies'
         run: 'yarn install --frozen-lockfile'
 
