--- a/apps/functions/tsconfig.json
+++ b/apps/functions/tsconfig.json
@@ -7,9 +7,9 @@
     "outDir": "dist",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
   },
   "include": [
     "src/**/*.ts"
-  ]
+  ],
 }
