--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-intersection-observer": "^9.5.1",
     "sharp": "^0.32.6",
     "slugify": "^1.6.6",
+    "stripe": "^14.2.0",
     "three": "^0.157.0",
+    "tsc-alias": "^1.8.8",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.2"
