--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -78,11 +78,12 @@ jobs:
           name: 'dist'
           path: 'dist'
 
-      - name: 'Prepare .env.runtime for Cloud Run runtime'
-        run: |
-          cat <<EOF > .env.runtime
-          ^@^NEXT_IMAGE_DOMAINS=${{ vars.NEXT_IMAGE_DOMAINS }}
-          EOF
+      # Waiting for https://github.com/google-github-actions/deploy-cloudrun/pull/469
+      # - name: 'Prepare .env.runtime for Cloud Run runtime'
+      #   run: |
+      #     cat <<EOF > .env.runtime
+      #     ^@^NEXT_IMAGE_DOMAINS=${{ vars.NEXT_IMAGE_DOMAINS }}
+      #     EOF
 
       - name: 'Deploy to Cloud Run'
         uses: google-github-actions/deploy-cloudrun@v1
@@ -90,7 +91,7 @@ jobs:
           service: storefront
           region: ${{ vars.GCP_REGION_ID }}
           source: ./dist/apps/storefront
-          env_vars_file: .env.runtime
+      #     env_vars_file: .env.runtime
 
   deploy-firebase-hosting:
     runs-on: ubuntu-latest
