--- a/apps/functions/tsconfig.json
+++ b/apps/functions/tsconfig.json
@@ -5,7 +5,7 @@
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "outDir": "dist",
-    "sourceMap": true,
+    "sourceMap": false,
     "strict": true,
     "target": "es2017",
   },
