--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  build-app:
     runs-on: ubuntu-latest
     steps:
       - uses: 'actions/checkout@v3'
@@ -34,35 +34,8 @@ jobs:
           name: 'dist'
           path: 'dist'
 
-  build-functions:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: 'actions/checkout@v3'
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'yarn'
-
-      - name: 'Download dependencies'
-        run: 'yarn install --frozen-lockfile'
-
-      - name: 'Download functions dependencies'
-        run: 'yarn install --frozen-lockfile'
-        working-directory: 'apps/functions'
-
-      - name: 'Build'
-        working-directory: 'apps/functions'
-        run: 'yarn build'
-
-      - name: 'Save artifacts'
-        uses: 'actions/upload-artifact@v2'
-        with:
-          name: 'functions'
-          path: 'apps/functions/dist'
-
-  deploy-to-cloud-run:
-    needs: [build]
+  deploy-app-to-cloud-run:
+    needs: [build-app]
     runs-on: ubuntu-latest
     steps:
       - uses: 'actions/checkout@v3'
@@ -95,7 +68,7 @@ jobs:
 
   deploy-firebase-hosting:
     runs-on: ubuntu-latest
-    needs: [deploy-to-cloud-run]
+    needs: [deploy-app-to-cloud-run]
     steps:
       - uses: 'actions/checkout@v3'
 
@@ -106,9 +79,20 @@ jobs:
         env:
           GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
 
-  deploy-firebase-without-hosting:
+  deploy-rules:
     runs-on: ubuntu-latest
-    needs: [build-functions]
+    steps:
+      - uses: 'actions/checkout@v3'
+
+      - name: Deploy Rules
+        uses: w9jds/firebase-action@master
+        with:
+          args: deploy --only firestore,storage
+        env:
+          GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+
+  build-deploy-functions:
+    runs-on: ubuntu-latest
     steps:
       - uses: 'actions/checkout@v3'
 
@@ -117,16 +101,10 @@ jobs:
           node-version: 18
           cache: 'yarn'
 
-      - name: 'Download Functions Artifacts'
-        uses: 'actions/download-artifact@v2'
-        with:
-          name: 'functions'
-          path: 'apps/functions/dist'
-
       - name: 'Set function .env'
         run: |
           cat <<EOF > apps/functions/.env
-          FRONTEND_BASE_URL=${{ vars.FRONTEND_BASE_URL }}
+          FRONTEND_BASE_URL="${{ vars.FRONTEND_BASE_URL }}"
           EOF
 
       - name: 'Download dependencies'
@@ -136,9 +114,13 @@ jobs:
         run: 'yarn install --frozen-lockfile'
         working-directory: 'apps/functions'
 
+      - name: 'Build functions'
+        run: 'yarn build'
+        working-directory: 'apps/functions'
+
       - name: Deploy
         uses: w9jds/firebase-action@master
         with:
-          args: deploy --except hosting
+          args: deploy --only functions
         env:
           GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
