feat: resize images in storage

--- a/firebase.json
+++ b/firebase.json
@@ -49,5 +49,8 @@
         "firebase-debug.*.log"
       ]
     }
-  ]
+  ],
+  "extensions": {
+    "storage-resize-images": "firebase/storage-resize-images@0.2.0"
+  }
 }
