--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -105,6 +105,7 @@ jobs:
         run: |
           cat <<EOF > apps/functions/.env
           FRONTEND_BASE_URL="${{ vars.FRONTEND_BASE_URL }}"
+          STORAGE_BASE_URL="${{ vars.STORAGE_BASE_URL }}"
           EOF
 
       - name: 'Download dependencies'
