fix: keep file ext for webp support

--- a/extensions/storage-resize-images.env
+++ b/extensions/storage-resize-images.env
@@ -7,3 +7,4 @@ IMG_SIZES=64x64,128x128,256x256,512x512
 INCLUDE_PATH_LIST=/articles,/fabrics,/orders,/carts
 IS_ANIMATED=true
 MAKE_PUBLIC=true
+LOCATION=europe-west3
