--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -12,6 +12,7 @@
     "envsafe": "^2.0.3",
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.4.1",
+    "sharp": "^0.32.6",
     "stripe": "^14.2.0",
     "tsc-alias": "^1.8.8",
     "tslib": "^2.6.2"
