--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "envsafe": "^2.0.3",
     "firebase": "^10.5.2",
     "firebase-admin": "^11.11.0",
-    "firebase-functions": "^4.4.1",
+    "firebase-functions": "^4.5.0",
     "next": "13.5.5",
+    "plaiceholder": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
