--- a/extensions/storage-resize-images.env
+++ b/extensions/storage-resize-images.env
@@ -3,7 +3,7 @@ DO_BACKFILL=false
 FUNCTION_MEMORY=1024
 IMAGE_TYPE=webp,png
 IMG_BUCKET=${param:PROJECT_ID}.appspot.com
-IMG_SIZES=64x64,128x128,256x256,512x512
+IMG_SIZES=64x128,128x256,256x512,512x1024,1024x2048
 INCLUDE_PATH_LIST=/articles,/fabrics,/orders,/carts
 IS_ANIMATED=true
 MAKE_PUBLIC=true
