--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
     "react-intersection-observer": "^9.5.1",
+    "schema-dts": "^1.1.2",
     "sharp": "^0.32.6",
     "slugify": "^1.6.6",
     "stripe": "^14.2.0",
