upgrade next & nx

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,10 +16,10 @@
     "baseUrl": ".",
     "paths": {
       "@couture-next/billing": ["libs/billing/src/index.ts"],
+      "@couture-next/routing": ["libs/routing/src/index.ts"],
       "@couture-next/types": ["libs/types/src/index.ts"],
       "@couture-next/ui": ["libs/ui/src/index.ts"],
-      "@couture-next/utils": ["libs/utils/src/index.ts"],
-      "@couture-next/routing": ["libs/routing/src/index.ts"]
+      "@couture-next/utils": ["libs/utils/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
