--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.1",
-    "@nx/next": "16.4.0",
+    "@nx/next": "17.1.2",
     "@react-three/drei": "^9.88.4",
     "@react-three/fiber": "^8.14.6",
     "@tanstack/react-query": "^5.8.3",
@@ -20,10 +20,10 @@
     "firebase": "^10.5.2",
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.5.0",
-    "next": "13.5.5",
+    "next": "^14.0.2",
     "plaiceholder": "^3.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
     "react-intersection-observer": "^9.5.1",
     "schema-dts": "^1.1.2",
@@ -37,42 +37,43 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
-    "@nx/eslint-plugin": "16.4.0",
-    "@nx/jest": "16.4.0",
-    "@nx/js": "16.4.0",
-    "@nx/linter": "16.4.0",
-    "@nx/react": "16.4.0",
-    "@nx/workspace": "16.4.0",
+    "@nx/eslint-plugin": "17.1.2",
+    "@nx/jest": "17.1.2",
+    "@nx/js": "17.1.2",
+    "@nx/react": "17.1.2",
+    "@nx/workspace": "17.1.2",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
-    "@types/react": "18.2.13",
-    "@types/react-dom": "18.2.6",
+    "@types/react": "18.2.24",
+    "@types/react-dom": "18.2.9",
     "@types/three": "^0.157.2",
     "@types/uuid": "^9.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
+    "@typescript-eslint/eslint-plugin": "6.11.0",
+    "@typescript-eslint/parser": "6.11.0",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
     "clsx": "^1.2.1",
-    "eslint": "~8.15.0",
-    "eslint-config-next": "13.4.1",
-    "eslint-config-prettier": "8.1.0",
+    "eslint": "8.46.0",
+    "eslint-config-next": "^14.0.2",
+    "eslint-config-prettier": "9.0.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
-    "nx": "16.4.0",
-    "nx-cloud": "latest",
+    "nx": "17.1.2",
+    "nx-cloud": "16.5.2",
     "postcss": "8.4.21",
     "prettier": "^2.6.2",
     "sass": "1.62.1",
     "tailwindcss": "3.3.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.3"
+    "typescript": "5.2.2",
+    "@nx/eslint": "17.1.2"
   }
 }
