--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-three/fiber": "^8.14.6",
     "@tanstack/react-query": "^5.8.3",
     "envsafe": "^2.0.3",
-    "firebase": "^10.5.2",
+    "firebase": "^10.6.0",
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.5.0",
     "next": "^14.0.2",
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
+    "@nx/eslint": "17.1.2",
     "@nx/eslint-plugin": "17.1.2",
     "@nx/jest": "17.1.2",
     "@nx/js": "17.1.2",
@@ -73,7 +74,6 @@
     "tailwindcss": "3.3.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.2.2",
-    "@nx/eslint": "17.1.2"
+    "typescript": "5.2.2"
   }
 }
