--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -106,6 +106,7 @@ jobs:
           cat <<EOF > apps/functions/.env
           FRONTEND_BASE_URL="${{ vars.FRONTEND_BASE_URL }}"
           STORAGE_BASE_URL="${{ vars.STORAGE_BASE_URL }}"
+          CMS_BASE_URL="${{ vars.CMS_BASE_URL }}"
           EOF
 
       - name: 'Download dependencies'
