--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@tanstack/react-query": "^5.8.3",
     "envsafe": "^2.0.3",
     "firebase": "^10.6.0",
-    "firebase-admin": "^11.11.0",
+    "firebase-admin": "^11.11.1",
     "firebase-functions": "^4.5.0",
     "next": "^14.0.2",
     "plaiceholder": "^3.0.0",
@@ -64,6 +64,7 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "firebase-tools": "^12.9.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "nx": "17.1.2",
