--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "@react-three/drei": "^9.88.4",
     "@react-three/fiber": "^8.14.6",
     "@tanstack/react-query": "^5.8.3",
+    "axios": "^1.6.2",
     "envsafe": "^2.0.3",
+    "fast-xml-parser": "^4.3.2",
     "firebase": "^10.6.0",
     "firebase-admin": "^11.11.1",
     "firebase-functions": "^4.5.0",
+    "leaflet": "^1.9.4",
     "next": "^14.0.2",
     "plaiceholder": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
     "react-intersection-observer": "^9.5.1",
+    "react-leaflet": "^4.2.1",
     "schema-dts": "^1.1.2",
     "sharp": "^0.32.6",
     "slugify": "^1.6.6",
@@ -45,8 +49,11 @@
     "@nx/js": "17.1.2",
     "@nx/react": "17.1.2",
     "@nx/workspace": "17.1.2",
+    "@swc-node/register": "~1.6.7",
+    "@swc/core": "~1.3.85",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "18.14.2",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.9",
