--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {
       "@couture-next/billing": ["libs/billing/src/index.ts"],
       "@couture-next/routing": ["libs/routing/src/index.ts"],
+      "@couture-next/shipping": ["libs/shipping/src/index.ts"],
       "@couture-next/types": ["libs/types/src/index.ts"],
       "@couture-next/ui": ["libs/ui/src/index.ts"],
       "@couture-next/utils": ["libs/utils/src/index.ts"]
