--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -9,7 +9,9 @@
   },
   "main": "dist/apps/functions/src/index.js",
   "dependencies": {
+    "axios": "^1.6.2",
     "envsafe": "^2.0.3",
+    "fast-xml-parser": "^4.3.2",
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.4.1",
     "sharp": "^0.32.6",
