--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "leaflet": "^1.9.4",
     "next": "^14.0.2",
     "plaiceholder": "^3.0.0",
+    "posthog-js": "^1.94.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
