--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -74,7 +74,7 @@ jobs:
       - uses: 'actions/checkout@v3'
 
       - name: Deploy Hosting
-        uses: w9jds/firebase-action@master
+        uses: w9jds/firebase-action@v12.9.0
         with:
           args: deploy --only hosting
         env:
@@ -86,7 +86,7 @@ jobs:
       - uses: 'actions/checkout@v3'
 
       - name: Deploy Rules
-        uses: w9jds/firebase-action@master
+        uses: w9jds/firebase-action@v12.9.0
         with:
           args: deploy --only firestore,storage
         env:
@@ -123,7 +123,7 @@ jobs:
         working-directory: 'apps/functions'
 
       - name: Deploy
-        uses: w9jds/firebase-action@master
+        uses: w9jds/firebase-action@v12.9.0
         with:
           args: deploy --only functions
         env:
