--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -14,6 +14,7 @@
     "fast-xml-parser": "^4.3.2",
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.4.1",
+    "node-mailjet": "^6.0.5",
     "sharp": "^0.32.6",
     "stripe": "^14.2.0",
     "tsc-alias": "^1.8.8",
