--- a/firebase.json
+++ b/firebase.json
@@ -32,7 +32,10 @@
     "hosting": {
       "port": 5000
     },
-    "singleProjectMode": true
+    "singleProjectMode": true,
+    "pubsub": {
+      "port": 8085
+    }
   },
   "firestore": {
     "rules": "firestore.rules",
