--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -16,6 +16,7 @@
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.4.1",
     "node-mailjet": "^6.0.5",
+    "react-google-recaptcha": "^3.1.0",
     "sharp": "^0.32.6",
     "stripe": "^14.2.0",
     "tsc-alias": "^1.8.8",
@@ -23,6 +24,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/react-google-recaptcha": "^2.1.8",
     "concurrently": "^8.2.2",
     "typescript": "^5.2.2"
   },
