--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "posthog-js": "^1.94.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.46.2",
     "react-intersection-observer": "^9.5.1",
     "react-leaflet": "^4.2.1",
@@ -60,6 +61,7 @@
     "@types/node": "18.14.2",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.9",
+    "@types/react-google-recaptcha": "^2.1.8",
     "@types/three": "^0.157.2",
     "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "6.11.0",
