--- a/extensions/storage-resize-images.env
+++ b/extensions/storage-resize-images.env
@@ -6,5 +6,4 @@ IMG_BUCKET=${param:PROJECT_ID}.appspot.com
 IMG_SIZES=64x128,128x256,256x512,512x1024,1024x2048
 INCLUDE_PATH_LIST=/articles,/fabrics,/orders,/carts
 IS_ANIMATED=true
-MAKE_PUBLIC=true
-LOCATION=europe-west3
+MAKE_PUBLIC=false
