--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google-cloud/pubsub": "^4.1.0",
     "axios": "^1.6.2",
+    "csvtojson": "^2.0.10",
     "envsafe": "^2.0.3",
     "fast-xml-parser": "^4.3.2",
     "firebase-admin": "^11.11.0",
@@ -21,6 +22,7 @@
     "stripe": "^14.2.0",
     "tsc-alias": "^1.8.8",
     "tslib": "^2.6.2",
+    "wget-improved": "^3.4.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
