--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/fiber": "^8.14.6",
     "@tanstack/react-query": "^5.8.3",
     "axios": "^1.6.2",
+    "csvtojson": "^2.0.10",
     "envsafe": "^2.0.3",
     "fast-xml-parser": "^4.3.2",
     "firebase": "^10.6.0",
@@ -42,6 +43,7 @@
     "tsc-alias": "^1.8.8",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
+    "wget-improved": "^3.4.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
