--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.1",
-    "@nx/next": "17.1.2",
+    "@nx/next": "^17.2.8",
     "@react-three/drei": "^9.93.0",
     "@react-three/fiber": "^8.15.13",
     "@tanstack/react-query": "^5.8.3",
@@ -24,7 +24,7 @@
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.6.0",
     "leaflet": "^1.9.4",
-    "next": "^14.0.2",
+    "next": "^14.0.4",
     "node-mailjet": "^6.0.5",
     "plaiceholder": "^3.0.0",
     "posthog-js": "^1.98.0",
