--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "posthog-js": "^1.98.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.12",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.46.2",
     "react-intersection-observer": "^9.5.1",
