--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.46.2",
     "react-intersection-observer": "^9.5.1",
     "react-leaflet": "^4.2.1",
+    "react-schemaorg": "^2.0.0",
     "schema-dts": "^1.1.2",
     "sharp": "^0.32.6",
     "slugify": "^1.6.6",
