--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -9,13 +9,13 @@
   },
   "main": "dist/apps/functions/src/index.js",
   "dependencies": {
+    "@getbrevo/brevo": "^2.0.0-beta.4",
     "@google-cloud/pubsub": "^4.1.0",
     "axios": "^1.6.2",
     "envsafe": "^2.0.3",
     "fast-xml-parser": "^4.3.2",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.6.0",
-    "node-mailjet": "^6.0.5",
     "sharp": "^0.32.6",
     "stripe": "^14.2.0",
     "tsc-alias": "^1.8.8",
