--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-intersection-observer": "^9.5.1",
     "react-leaflet": "^4.2.1",
     "react-schemaorg": "^2.0.0",
+    "react-use-measure": "^2.1.1",
     "schema-dts": "^1.1.2",
     "sharp": "^0.32.6",
     "slugify": "^1.6.6",
