--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -87,8 +87,8 @@ jobs:
 
       - name: 'move next-static to match firebase public folder'
         run: |
-          mkdir -p public/_next/static
-          mv next-static-artifact/* public/_next/static
+          mkdir next-static
+          mv next-static-artifact/* next-static/_next/static
 
       - name: Deploy Hosting
         uses: w9jds/firebase-action@v12.9.0
