--- a/firebase.json
+++ b/firebase.json
@@ -21,6 +21,15 @@
         ]
       },
       {
+        "source": "/",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=300, s-maxage=300, stale-while-revalidate=604800"
+          }
+        ]
+      },
+      {
         "source": "/(evenements|partenaires|foire-aux-questions)",
         "headers": [
           {
@@ -38,9 +47,34 @@
             "value": "public, max-age=300, s-maxage=300, stale-while-revalidate=604800"
           }
         ]
+      },{
+        "source": "/boutique",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=300, s-maxage=300, stale-while-revalidate=604800"
+          }
+        ]
       },
       {
         "source": "/(nous-contacter|connexion|inscription)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=3600, s-maxage=604800, stale-while-revalidate=604800, immutable"
+          }
+        ]
+      },
+      {
+        "source": "/_next/images/(brand.webp|brand.png)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=3600, s-maxage=604800, stale-while-revalidate=604800, immutable"
+          }
+        ]
+      }, {
+        "source": "/favicon.ico",
         "headers": [
           {
             "key": "Cache-Control",
