--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/drei": "^9.93.0",
     "@react-three/fiber": "^8.15.13",
     "@tanstack/react-query": "^5.15.0",
+    "algoliasearch": "^4.22.1",
     "axios": "^1.6.4",
     "envsafe": "^2.0.3",
     "fast-xml-parser": "^4.3.2",
@@ -33,6 +34,7 @@
     "react-error-boundary": "^4.0.12",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.49.2",
+    "react-instantsearch": "^7.6.0",
     "react-intersection-observer": "^9.5.1",
     "react-leaflet": "^4.2.1",
     "react-schemaorg": "^2.0.0",
