--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-leaflet": "^4.2.1",
     "react-schemaorg": "^2.0.0",
     "react-use-measure": "^2.1.1",
+    "sanitize-html": "^2.11.0",
     "schema-dts": "^1.1.2",
     "sharp": "^0.32.6",
     "slugify": "^1.6.6",
@@ -68,6 +69,7 @@
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.9",
     "@types/react-google-recaptcha": "^2.1.8",
+    "@types/sanitize-html": "^2.11.0",
     "@types/three": "^0.157.2",
     "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "6.21.0",
