fix: ISR_SECRET env missing

--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           cat <<EOF > .env
           ${{ vars.BUILD_ENV_FILE }}
+          ISR_SECRET="${{ secrets.ISR_SECRET }}"
           EOF
       - name: 'Build'
         run: 'yarn build'
