--- a/firebase.json
+++ b/firebase.json
@@ -47,7 +47,8 @@
             "value": "public, max-age=300, s-maxage=300, stale-while-revalidate=604800"
           }
         ]
-      },{
+      },
+      {
         "source": "/boutique",
         "headers": [
           {
@@ -73,12 +74,22 @@
             "value": "public, max-age=3600, s-maxage=604800, stale-while-revalidate=604800, immutable"
           }
         ]
-      }, {
+      },
+      {
         "source": "/favicon.ico",
         "headers": [
           {
             "key": "Cache-Control",
             "value": "public, max-age=3600, s-maxage=604800, stale-while-revalidate=604800, immutable"
+          }
+        ]
+      },
+      {
+        "source": "/images/**",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=86400, s-maxage=604800, stale-while-revalidate=604800, immutable"
           }
         ]
       }
@@ -119,12 +130,7 @@
     {
       "source": "apps/functions",
       "codebase": "default",
-      "ignore": [
-        "node_modules",
-        ".git",
-        "firebase-debug.log",
-        "firebase-debug.*.log"
-      ]
+      "ignore": ["node_modules", ".git", "firebase-debug.log", "firebase-debug.*.log"]
     }
   ],
   "extensions": {
