--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "5.3.3",
+    "wget-improved": "^3.4.0",
     "yargs": "^17.7.2"
   }
 }
