--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -1,94 +1,66 @@
 name: 'Build & Deploy Petit Roudoudou V2'
 
+// TODO env vars of storefront
+
 on:
   push:
     branches: [main]
 
 jobs:
-  build-app:
+  push-storefront-image:
     if: "!contains(github.event.head_commit.message, '[skip ci:storefront]')"
     runs-on: ubuntu-latest
     steps:
       - uses: 'actions/checkout@v3'
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'yarn'
-
-      - name: 'Download dependencies'
-        run: 'yarn install --frozen-lockfile'
+      - name: 'Setup buildx'
+        uses: 'docker/setup-buildx-action@v2'
 
       - name: 'Setup .env'
         run: |
-          cat <<EOF > .env
+          cat <<EOF > apps/storefront/.env
           ${{ vars.BUILD_ENV_FILE }}
           EOF
-      - name: 'Build'
-        run: 'yarn build'
 
-      - name: 'Save next static'
-        uses: 'actions/upload-artifact@v3'
+      - name: 'Push Docker image'
+        uses: 'docker/build-push-action@v2'
         with:
-          name: 'next-static'
-          path: 'dist/apps/storefront/.next/static'
+          context: './dist/apps/storefront'
+          file: './apps/storefront/Dockerfile'
+          push: true
+          tags: ${{ vars.DOCKER_REGISTRY }}/${{ github.repository }}-storefront:latest
 
-      - name: 'Save artifacts'
-        uses: 'actions/upload-artifact@v3'
-        with:
-          name: 'dist'
-          path: 'dist'
-
-  deploy-app-to-cloud-run:
-    needs: [build-app]
+  deploy-storefront: # ssh and docker compose up
     runs-on: ubuntu-latest
+    depends-on: push-storefront-image
     steps:
       - uses: 'actions/checkout@v3'
 
-      - name: 'Authenticate to Google Cloud'
-        uses: 'google-github-actions/auth@v1'
+      - name: 'Copy compose file over scp'
+        uses: 'appleboy/scp-action@v0.1.7'
         with:
-          credentials_json: '${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}'
+          host: ${{ secrets.STOREFRONT_SSH_HOST }}
+          username: ${{ secrets.STOREFRONT_SSH_USER }}
+          password: ${{ secrets.STOREFRONT_SSH_PASSWORD }}
+          source: './docker-compose.yml'
+          target: ${{ vars.STOREFRONT_DEPLOY_PATH }}/docker-compose.yml
 
-      - name: 'Download artifacts'
-        uses: 'actions/download-artifact@v3'
+      - name: 'Deploy Storefront'
+        uses: 'appleboy/ssh-action@v1.0.3'
         with:
-          name: 'dist'
-          path: 'dist'
-
-      - name: 'Deploy to Cloud Run'
-        uses: google-github-actions/deploy-cloudrun@v2
-        with:
-          service: storefront
-          region: ${{ vars.GCP_REGION_ID }}
-          source: ./dist/apps/storefront
-          gcloud_version: '455.0.0'
-          env_vars: |
-            ISR_SECRET=${{ secrets.ISR_SECRET }}
-
-  deploy-firebase-hosting:
-    runs-on: ubuntu-latest
-    needs: [deploy-app-to-cloud-run]
-    steps:
-      - uses: 'actions/checkout@v3'
-
-      - name: 'Download artifacts'
-        uses: 'actions/download-artifact@v3'
-        with:
-          name: 'next-static'
-          path: 'next-static-artifact'
-
-      - name: 'move next-static to match firebase public folder'
-        run: |
-          mkdir -p next-static/_next/static
-          mv next-static-artifact/* next-static/_next/static
-
-      - name: Deploy Hosting
-        uses: w9jds/firebase-action@v12.9.0
-        with:
-          args: deploy --only hosting
-        env:
-          GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+          host: ${{ secrets.STOREFRONT_SSH_HOST }}
+          username: ${{ secrets.STOREFRONT_SSH_USER }}
+          password: ${{ secrets.STOREFRONT_SSH_PASSWORD }}
+          script: |
+            cd ${{ vars.STOREFRONT_DEPLOY_PATH }}
+            docker login -u $DOCKER_REGISTRY_USER -p $DOCKER_REGISTRY_PASS $DOCKER_REGISTRY
+            docker-compose pull storefront
+            docker-compose up -d storefront
+          env:
+            DOCKER_REGISTRY_USER: ${{ github.actor }}
+            DOCKER_REGISTRY_PASS: ${{ secrets.GITHUB_TOKEN }}
+            DOCKER_REGISTRY: ${{ vars.DOCKER_REGISTRY }}
+            STOREFRONT_DOCKER_IMAGE: ${{ vars.DOCKER_REGISTRY }}/${{ github.repository }}-storefront:latest
 
   deploy-rules:
     runs-on: ubuntu-latest
@@ -103,6 +75,7 @@ jobs:
           GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
 
   build-deploy-functions:
+    if: "!contains(github.event.head_commit.message, '[skip ci:functions]')"
     runs-on: ubuntu-latest
     steps:
       - uses: 'actions/checkout@v3'
