[skip ci:functions] chore: move storefront deployment to VM

--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -51,6 +51,10 @@ jobs:
         run: |
           TMP_REPO_VAR="${{ github.repository }}" echo "REGISTRY_BASE_URI=${TMP_REPO_VAR@L}" >> "${GITHUB_ENV}"
 
+      - name: 'test'
+        run: |
+          echo $REGISTRY_BASE_URI
+
       - name: 'Deploy Storefront'
         uses: 'appleboy/ssh-action@v1.0.3'
         with:
