[skip ci:functions] chore: move storefront deployment to VM

--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -30,7 +30,7 @@ jobs:
 
   deploy-storefront: # ssh and docker compose up
     runs-on: ubuntu-latest
-    needs: push-storefront-image
+    needs: build-push-storefront-image
     steps:
       - uses: 'actions/checkout@v3'
 
