--- a/apps/storefront/Dockerfile
+++ b/apps/storefront/Dockerfile
@@ -24,6 +24,16 @@ COPY . .
 RUN \
   npx nx run storefront:build:production
 
+# Static assets image
+# busybox httpd compiled with minimal features 
+# https://github.com/lipanski/docker-static-website
+FROM lipanski/docker-static-website as static-assets
+
+COPY --from=builder /app/dist/apps/storefront/public .
+
+RUN mkdir -p ./_next/static
+COPY --from=builder --chown=nextjs:nodejs /app/dist/apps/storefront/.next/static ./_next/static
+
 # Production image
 FROM base AS runner
 WORKDIR /app
@@ -35,16 +45,13 @@ ENV NODE_ENV production
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
-COPY --from=builder /app/dist/apps/storefront/public ./public
-
 # Set the correct permission for prerender cache
 RUN mkdir .next
 RUN chown nextjs:nodejs .next
 
 # Automatically leverage output traces to reduce image size
 # https://nextjs.org/docs/advanced-features/output-file-tracing
-COPY --from=builder --chown=nextjs:nodejs /app/dist/apps/storefront/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/dist/apps/storefront/.next/static ./.next/static
+COPY --from=builder --chown=nextjs:nodejs /app/dist/apps/storefront/.next/standalone/ ./
 
 USER nextjs
 
