chore: deploy storefront assets separatly

--- a/apps/storefront/Dockerfile
+++ b/apps/storefront/Dockerfile
@@ -24,15 +24,16 @@ COPY . .
 RUN \
   npx nx run storefront:build:production
 
+RUN mkdir -p /app/static-assets/_next
+RUN mv /app/dist/apps/storefront/public /app/static-assets
+RUN mv /app/dist/apps/storefront/.next/static /app/static-assets/_next
+
 # Static assets image
 # busybox httpd compiled with minimal features 
 # https://github.com/lipanski/docker-static-website
 FROM lipanski/docker-static-website as static-assets
 
-COPY --from=builder /app/dist/apps/storefront/public .
-
-RUN mkdir -p ./_next/static
-COPY --from=builder --chown=nextjs:nodejs /app/dist/apps/storefront/.next/static ./_next/static
+COPY --from=builder /app/static-assets .
 
 # Production image
 FROM base AS runner
